--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -4,6 +4,7 @@
 body{
   margin: 0;
   padding: 0;
+  padding-bottom: 300px;
 }
 
 header{
@@ -150,4 +151,17 @@ nav a:hover{
   display: flex;
   justify-content: space-between;
   margin-top: 8px;
+}
+
+#geral {
+  display: flex;
+  justify-content: center;
+}
+
+#geral section {
+  flex: 2;
+}
+
+#geral aside {
+  flex: 1;
 }
