--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -58,7 +58,7 @@ nav a:hover{
 #banner{
   display: flex;
   justify-content: center;
-  background-image:url("../img/img1.jpg");
+  background-image:url("../img/img.jpg");
   background-position: center;
   background-size: cover;
   height: 670px;
@@ -164,4 +164,140 @@ nav a:hover{
 
 #geral aside {
   flex: 1;
+}
+
+.widget_title {
+  margin-top: 30px;
+  margin-bottom: 20px;
+}
+
+.widget_title_text {
+  color: #000000;
+  font-size: 21px;
+  font-weight: bold;
+}
+
+.widget_title_bar {
+  width: 60px;
+  height: 3px;
+  background-color: #36a9e1;
+  margin-top: 10px;
+}
+
+.widget_depart_body {
+  display: flex;
+  flex-wrap: wrap;
+}
+.Depart_box {
+  width: 100px;
+  height: 100px;
+  margin: 10px;
+  background-color: #39aae1;
+}
+
+.flex{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+article{
+  flex: 1;
+  min-width: 300px;
+  margin-right: 20px;
+}
+
+article a {
+  text-decoration: none;
+}
+
+article .news_data {
+  display: flex;
+}
+
+article .news_posted_at {
+  background-color: #2b4c99;
+  color: #FFFFFF;
+  font-size: 12px;
+  padding: 10px;
+  margin-right: 2px;
+}
+
+article .news_comments{
+  background-color: #39aae1;
+  color: #FFFFFF;
+  font-size: 12px;
+  padding: 10px;
+}
+
+article .news_thumbnail {
+  margin-top: 30px;
+}
+
+article .news_thumbnail {
+  margin-top: 30px;
+}
+
+
+article .news_thumbnail img {
+  width: 100%;
+  height: auto;
+}
+
+article .news_title{
+  margin-top: 25px;
+  margin-bottom: 25px;
+  font-size: 23px;
+  color: #000000;
+}
+
+article .news_resume {
+  color: #5c5c5c;
+  font-size: 14px;
+  line-height: 20px;
+  margin-bottom: 30px;
+}
+
+footer{
+  background-color: #1e1e1e;
+  display: flex;
+  justify-content: center;
+}
+
+.footer_menu{
+  display: flex;  
+}
+
+.fm_1, .fm_2, .fm_3 {
+  flex: 1;
+  color: #ffffff;
+  padding: 20px;
+}
+
+.fm_1{
+  background-color: #39aae1;
+}
+
+.fm_2{
+  background-color: #0079c7;
+}
+
+.fm_3{
+  background-color: #2b4c99;
+}
+
+.footer_area {
+  display: flex;
+}
+
+.footer_areaitem {
+  flex: 1;
+  color: #ffffff;
+}
+
+.flexColumn {
+  flex-direction: column;
+}
+
+footer .widget_title_text {
+  color: #ffffff
 }
